--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -60,7 +60,7 @@
               name="reserve"
               action="index.html"
               method="get"
-             /*onsubmit="return validate();"*/
+             /*onsubmit="return validateForm();"*/
             >
               <div
                 class="formData">
@@ -211,6 +211,10 @@
                 value="C'est parti"
               />
             </form>
+            <div id="submitConfirm" class="select-hide">
+              Merci pour votre inscription !
+              <input class="btn-confirm" id="closeForm" type="submit" value="Fermer">
+            </div>
           </div>
         </div>
       </div>
